# ZhiZha-Messenger-Server

./: .gitignore  CMakeLists.txt  CMakePresets.json  JsonApi.md  README.md
src/: ChatServer.cpp  ChatServer.hpp  main.cpp
src/core/: KeyGenerator.cpp  KeyGenerator.hpp  Room.cpp  Room.hpp  Types.hpp  UserContext.hpp
src/protocol/: JsonMessages.hpp  JsonPacker.cpp  JsonPacker.hpp  JsonParser.cpp  JsonParser.hpp
